--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
+    "joi": "^17.6.0",
     "moment": "^2.29.3",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
